# rusnya_alert

./: CMakeLists.txt  README.md  embed_txt.py  gen_version.sh  ota_https.pem  partitions_example.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  alert_api.c  alert_api.h  app_main.c  app_main.h  config.h  ctx.h  led_pattern.c  led_pattern.h  main.c  ota.c  ota.h  settings.c  settings.h  sntp_time.c  sntp_time.h  sound.c  sound.h  wifi.c  wifi.h
